[package]
name = "minne"
version = "0.3.0"
edition = "2021"
authors = ["Markus Hovd <markus.hovd@farmasi.uio.no>", "Julián D. Otálvaro"]
description = "Fast and thread-safe cache for Rust"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
csv = "1.3.0"
dashmap = "6.0.1"
serde = { version = "1.0.209", features = ["derive"] }
